# docs/openapi.json
@@ -117,8 +117,7 @@
             "description": "The story id",
             "required": true,
             "schema": {
-              "type": "string",
-              "format": "uuid"
+              "$ref": "#/components/schemas/StoryId"
             }
           }
         ],
@@ -185,8 +184,7 @@
             "description": "The story id",
             "required": true,
             "schema": {
-              "type": "string",
-              "format": "uuid"
+              "$ref": "#/components/schemas/StoryId"
             }
           }
         ],
@@ -248,8 +246,7 @@
             "description": "The parent story id",
             "required": true,
             "schema": {
-              "type": "string",
-              "format": "uuid"
+              "$ref": "#/components/schemas/StoryId"
             }
           }
         ],
@@ -289,8 +286,7 @@
             "description": "The parent story id",
             "required": true,
             "schema": {
-              "type": "string",
-              "format": "uuid"
+              "$ref": "#/components/schemas/StoryId"
             }
           }
         ],
@@ -345,8 +341,7 @@
             "description": "The parent story id",
             "required": true,
             "schema": {
-              "type": "string",
-              "format": "uuid"
+              "$ref": "#/components/schemas/StoryId"
             }
           },
           {
@@ -355,8 +350,7 @@
             "description": "The id of the file metadata",
             "required": true,
             "schema": {
-              "type": "string",
-              "format": "uuid"
+              "$ref": "#/components/schemas/StoryFileId"
             }
           }
         ],
@@ -396,8 +390,7 @@
             "description": "The parent story id",
             "required": true,
             "schema": {
-              "type": "string",
-              "format": "uuid"
+              "$ref": "#/components/schemas/StoryId"
             }
           },
           {
@@ -406,8 +399,7 @@
             "description": "The id of the file to delete",
             "required": true,
             "schema": {
-              "type": "string",
-              "format": "uuid"
+              "$ref": "#/components/schemas/StoryFileId"
             }
           }
         ],
@@ -435,8 +427,7 @@
             "description": "The parent story id",
             "required": true,
             "schema": {
-              "type": "string",
-              "format": "uuid"
+              "$ref": "#/components/schemas/StoryId"
             }
           },
           {
@@ -445,8 +436,7 @@
             "description": "The id of the file to download",
             "required": true,
             "schema": {
-              "type": "string",
-              "format": "uuid"
+              "$ref": "#/components/schemas/StoryFileId"
             }
           }
         ],
@@ -481,8 +471,7 @@
             "description": "The story id",
             "required": true,
             "schema": {
-              "type": "string",
-              "format": "uuid"
+              "$ref": "#/components/schemas/StoryId"
             }
           },
           {
@@ -577,8 +566,7 @@
             "description": "The task id",
             "required": true,
             "schema": {
-              "type": "string",
-              "format": "uuid"
+              "$ref": "#/components/schemas/TaskId"
             }
           }
         ],
@@ -618,8 +606,7 @@
             "description": "The task id",
             "required": true,
             "schema": {
-              "type": "string",
-              "format": "uuid"
+              "$ref": "#/components/schemas/TaskId"
             }
           }
         ],
@@ -645,8 +632,7 @@
             "description": "The task id",
             "required": true,
             "schema": {
-              "type": "string",
-              "format": "uuid"
+              "$ref": "#/components/schemas/TaskId"
             }
           }
         ],
@@ -715,8 +701,7 @@
             ]
           },
           "story_id": {
-            "type": "string",
-            "format": "uuid"
+            "$ref": "#/components/schemas/StoryId"
           }
         }
       },
